--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CodeForge++ | Home</title>
+  <!-- Link your CSS files -->
   <link rel="stylesheet" href="styles/enhanced_styles.css" />
   <link rel="stylesheet" href="styles/animations.css" />
 </head>
-<body>
-  <!-- Header -->
+<body class="dark-theme"> <!-- Start in dark theme -->
+
+  <!-- Header with hamburger + toggle button -->
   <header class="glass header-slide-in compact-header">
     <div class="nav-container">
       <h1 class="logo">
         <span class="logo-text">CodeForge++</span>
         <span class="logo-icon">{<></>}</span>
       </h1>
+
+      <!-- Hamburger for mobile -->
       <div class="menu-toggle" id="menuToggle">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
       </div>
+
+      <!-- Navigation -->
       <nav>
         <ul class="nav-menu" id="navMenu">
           <li><a href="exercises.html" class="nav-link">Exercises</a></li>
@@ -28,47 +34,27 @@
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
       </nav>
+
+      <!-- Theme Toggle Button EXACT placement -->
+      <button id="theme-toggle" class="btn" style="margin-left:20px;">Switch Theme</button>
     </div>
   </header>
 
   <!-- Hero Section -->
   <section class="index-hero glass fade-in">
     <h1 class="hero-title">Elevate Your C++ Skills</h1>
-    <p class="slide-up">
-      A comprehensive, interview-focused platform with advanced modules,
-      an embedded IDE, real-time progress tracking, plus brand-new animations!
-    </p>
+    <p>A robust platform with advanced modules, progress tracking, and more.</p>
     <a href="exercises.html" class="btn btn-glow">Get Started</a>
   </section>
 
-  <!-- Featured Highlights -->
-  <section class="features slide-up">
-    <div class="feature-card glass card-hover floating-card">
-      <h3>Robust Syllabus</h3>
-      <p>Learn advanced C++: concurrency, embedded, memory management, and more.</p>
-    </div>
-    <div class="feature-card glass card-hover floating-card">
-      <h3>In-Browser IDE</h3>
-      <p>Write, compile, and test code right here—no external tools needed.</p>
-    </div>
-    <div class="feature-card glass card-hover floating-card">
-      <h3>Progress & Quizzes</h3>
-      <p>Track achievements, timed quizzes, local leaderboard, and instant feedback.</p>
-    </div>
-  </section>
-
-  <!-- Call-to-Action -->
-  <section class="cta glass fade-in">
-    <h2>Prepare for Your Next Interview</h2>
-    <a href="exercises.html" class="btn">Explore Modules</a>
-  </section>
+  <!-- Possibly more sections... -->
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 CodeForge++. Developer & Owner: Ohad Alon. All rights reserved.</p>
+    <p>© 2025 CodeForge++. All rights reserved.</p>
   </footer>
 
-  <!-- Scripts -->
+  <!-- Script for hamburger + theme toggle. Make sure it's LAST, so JS can find the elements -->
   <script src="scripts/main.js"></script>
 </body>
 </html>
