enhance theme toggle functionality, improve progress display logic, and update HTML structure for better accessibility

--- a/exercises.html
+++ b/exercises.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/enhanced_styles.css" />
   <link rel="stylesheet" href="styles/animations.css" />
 </head>
-<body>
+<body class="dark-theme">
   <header class="glass header-slide-in compact-header">
     <div class="nav-container">
       <h1 class="logo">
@@ -27,53 +27,54 @@
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
       </nav>
+      <button id="theme-toggle" class="btn" style="margin-left:20px;">Switch Theme</button>
     </div>
   </header>
 
   <main class="page-content fade-in exercise-list">
-    <h2 class="section-title" style="color:#fff; text-align:center; margin-bottom:10px;">Advanced C++ Interview Syllabus</h2>
+    <h1 style="text-align:center;">Advanced C++ Interview Syllabus</h1>
     <p style="text-align:center; max-width:800px; margin:0 auto 30px;">
-      Choose a module to see thorough lessons, a collapsible timeline, advanced tasks, and integrated media.
+      Choose a module below to see thorough lessons, a collapsible timeline, advanced tasks, and integrated media.
     </p>
 
     <div class="course-module glass">
-      <h3>Module 1: Foundations & Modern Features</h3>
+      <h2>Module 1: Foundations & Modern Features</h2>
       <p>RAII, smart pointers, lambdas, advanced C++11/14/17 features.</p>
       <a href="module1.html" class="btn lesson-btn">Go to Module 1</a>
     </div>
 
     <div class="course-module glass">
-      <h3>Module 2: Data Structures & Algorithms</h3>
-      <p>Complexities, searching/sorting, BFS/DFS, and puzzle challenges.</p>
+      <h2>Module 2: Data Structures & Algorithms</h2>
+      <p>Complexities, searching/sorting, BFS/DFS, puzzle challenges.</p>
       <a href="module2.html" class="btn lesson-btn">Go to Module 2</a>
     </div>
 
     <div class="course-module glass">
-      <h3>Module 3: Real-Time & Embedded</h3>
+      <h2>Module 3: Real-Time & Embedded</h2>
       <p>RTOS, concurrency in embedded, interrupts, hardware debugging.</p>
       <a href="module3.html" class="btn lesson-btn">Go to Module 3</a>
     </div>
 
     <div class="course-module glass">
-      <h3>Module 4: Concurrency & Multithreading</h3>
+      <h2>Module 4: Concurrency & Multithreading</h2>
       <p>Threads, mutexes, lock-free data structures, advanced concurrency patterns.</p>
       <a href="module4.html" class="btn lesson-btn">Go to Module 4</a>
     </div>
 
     <div class="course-module glass">
-      <h3>Module 5: Memory Management & Debugging</h3>
+      <h2>Module 5: Memory Management & Debugging</h2>
       <p>Manual vs. smart pointers, custom allocators, valgrind, GDB usage.</p>
       <a href="module5.html" class="btn lesson-btn">Go to Module 5</a>
     </div>
 
     <div class="course-module glass">
-      <h3>Module 6: Templates & Metaprogramming</h3>
+      <h2>Module 6: Templates & Metaprogramming</h2>
       <p>SFINAE, type traits, advanced compile-time programming tricks.</p>
       <a href="module6.html" class="btn lesson-btn">Go to Module 6</a>
     </div>
 
     <div class="course-module glass">
-      <h3>Module 7: System Design & Advanced Topics</h3>
+      <h2>Module 7: System Design & Advanced Topics</h2>
       <p>Design patterns, high-level architecture, common interview scenarios.</p>
       <a href="module7.html" class="btn lesson-btn">Go to Module 7</a>
     </div>
