--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/enhanced_styles.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
-<body>
+<body class="dark-theme portfolio-page">
   <header class="glass header-slide-in compact-header">
     <div class="nav-container">
       <h1 class="logo">
@@ -27,73 +27,62 @@
           <li><a href="resources.html" class="nav-link">Resources</a></li>
         </ul>
       </nav>
+      <button id="theme-toggle" class="btn" style="margin-left:20px;">Switch Theme</button>
     </div>
   </header>
 
-  <!-- Added margin-top to lower the portfolio content a bit more -->
-  <main class="page-content fade-in portfolio-page">
-    <section class="portfolio-section glass" style="padding:40px; margin-top:40px;">
-      <h2 class="section-title" style="color:#fff; text-align:center; margin-bottom:20px;">
-        Meet the Developer
-      </h2>
-      <p style="max-width:800px; margin:0 auto 30px; text-align:center; color:#ddd;">
-        Hello, I’m an RT Embedded Engineer specializing in C/C++ on Linux. This platform
-        is my advanced learning and portfolio demonstration, bridging real-time embedded topics
-        with modern C++ for a professional, interview-focused skill set.
-      </p>
+  <main class="page-content fade-in portfolio-section glass" style="margin-top:40px; padding:40px;">
+    <h1 style="text-align:center;">Meet the Developer</h1>
+    <p style="max-width:800px; margin:0 auto 30px; text-align:center;">
+      Hello, I’m an RT Embedded Engineer specializing in C/C++ on Linux. This platform
+      is my advanced learning and portfolio demonstration, bridging real-time embedded topics
+      with modern C++ for a professional, interview-focused skill set.
+    </p>
 
-      <div class="portfolio-highlights" style="margin-top:10px;">
-        <div class="highlight-card glass card-hover floating-card">
-          <h3>Background</h3>
-          <ul>
-            <li>B.Sc. in Computer Science</li>
-            <li>10+ years in embedded software development</li>
-            <li>Expertise in real-time systems, OS internals</li>
-          </ul>
-        </div>
-        <div class="highlight-card glass card-hover floating-card">
-          <h3>Focus Areas</h3>
-          <ul>
-            <li>Low-level C/C++ programming</li>
-            <li>Multi-threading and concurrency</li>
-            <li>Performance tuning & memory optimization</li>
-          </ul>
-        </div>
-        <div class="highlight-card glass card-hover floating-card">
-          <h3>Project Goals</h3>
-          <ul>
-            <li>Offer advanced modules for tough C++ interviews</li>
-            <li>In-browser IDE & solution checking</li>
-            <li>Showcase my professional portfolio & background</li>
-          </ul>
-        </div>
+    <div class="portfolio-highlights" style="margin-top:10px;">
+      <div class="highlight-card glass card-hover floating-card">
+        <h2>Background</h2>
+        <ul>
+          <li>B.Sc. in Computer Science</li>
+          <li>10+ years in embedded software development</li>
+          <li>Expertise in real-time systems, OS internals</li>
+        </ul>
       </div>
+      <div class="highlight-card glass card-hover floating-card">
+        <h2>Focus Areas</h2>
+        <ul>
+          <li>Low-level C/C++ programming</li>
+          <li>Multi-threading and concurrency</li>
+          <li>Performance tuning & memory optimization</li>
+        </ul>
+      </div>
+      <div class="highlight-card glass card-hover floating-card">
+        <h2>Project Goals</h2>
+        <ul>
+          <li>Offer advanced modules for tough C++ interviews</li>
+          <li>In-browser IDE & solution checking</li>
+          <li>Showcase my professional portfolio & background</li>
+        </ul>
+      </div>
+    </div>
 
-      <!-- Resume icon & link: bigger, with subtle glow on hover -->
-      <div style="margin-top:40px; text-align:center;">
-        <p style="margin-bottom:10px; color:#ccc;">
-          Check out my detailed CV/Resume:
-        </p>
-        <a href="resume.html" class="icon-btn resume-icon" title="View Resume">
-          <img src="https://img.icons8.com/material-outlined/24/ffffff/resume.png" alt="Resume Icon"/>
-        </a>
-      </div>
+    <!-- Resume + GitHub/LinkedIn icons -->
+    <div style="margin-top:40px; text-align:center;">
+      <p style="margin-bottom:10px;">Check out my detailed CV/Resume:</p>
+      <a href="resume.html" class="icon-btn" title="View Resume">
+        <img src="https://img.icons8.com/material-outlined/24/ffffff/resume.png" alt="Resume Icon"/>
+      </a>
+    </div>
 
-      <!-- GitHub & LinkedIn icons, bigger & glowy on hover -->
-      <div style="margin-top:30px; padding:20px; text-align:center;">
-        <p style="margin-bottom:10px; color:#ccc;">
-          Connect with me on GitHub & LinkedIn:
-        </p>
-        <a href="https://github.com/ohadonmicrosoft" target="_blank" class="icon-btn portfolio-icon" title="GitHub">
-          <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/github.svg" 
-               alt="GitHub" style="filter: invert(100%); width:28px;"/>
-        </a>
-        <a href="https://www.linkedin.com/in/ohad-alon" target="_blank" class="icon-btn portfolio-icon" title="LinkedIn">
-          <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/linkedin.svg" 
-               alt="LinkedIn" style="filter: invert(100%); width:28px;"/>
-        </a>
-      </div>
-    </section>
+    <div style="margin-top:30px; text-align:center;">
+      <p style="margin-bottom:10px;">Connect with me on GitHub & LinkedIn:</p>
+      <a href="https://github.com/ohadonmicrosoft" target="_blank" class="icon-btn" title="GitHub">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/github.svg" alt="GitHub" style="filter: invert(100%); width:28px;"/>
+      </a>
+      <a href="https://www.linkedin.com/in/ohad-alon" target="_blank" class="icon-btn" title="LinkedIn">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/linkedin.svg" alt="LinkedIn" style="filter: invert(100%); width:28px;"/>
+      </a>
+    </div>
   </main>
 
   <footer>
