--- a/quiz.html
+++ b/quiz.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/enhanced_styles.css" />
   <link rel="stylesheet" href="styles/animations.css" />
 </head>
-<body>
+<body class="dark-theme">
   <header class="glass header-slide-in compact-header">
     <div class="nav-container">
       <h1 class="logo">
@@ -28,26 +28,27 @@
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
       </nav>
+      <button id="theme-toggle" class="btn" style="margin-left:20px;">Switch Theme</button>
     </div>
   </header>
 
   <main class="page-content fade-in">
     <section class="glass" style="max-width:800px; margin:0 auto;">
-      <h2 class="section-title" style="color:#fff;">Interview Quiz</h2>
-      <p id="quiz-intro" style="color:#ccc;">Lesson-based quiz with a timer and local leaderboard!</p>
+      <h1>Interview Quiz</h1>
+      <p id="quiz-intro">Lesson-based quiz with a timer and local leaderboard!</p>
 
-      <!-- Timer and quiz container -->
+      <!-- Timer + Container -->
       <div class="quiz-timer" id="quiz-timer">Time: 00:00</div>
       <div id="quiz-container" class="quiz-container"></div>
 
       <button id="start-quiz" class="btn" style="margin-top:20px;">Start Quiz</button>
       <button id="submit-quiz" class="btn" style="display:none; margin-left:10px;">Submit Quiz</button>
 
-      <div id="quiz-result" style="margin-top:20px; font-weight:bold; color:#f97b7b;"></div>
+      <div id="quiz-result" style="margin-top:20px; font-weight:bold;"></div>
 
       <!-- Leaderboard -->
       <div class="leaderboard" id="leaderboard" style="display:none;">
-        <h3>Local Leaderboard</h3>
+        <h2>Local Leaderboard</h2>
         <div id="leaderboard-entries"></div>
       </div>
     </section>
